--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body
     align-items: center;
     position: absolute;
     top: 17vh;
+    left: 6em;
     font-size:8.5vh;
     color: #5b98ed;
 }
