--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 .card .box::before
 {
@@ -97,6 +98,7 @@ body
     width: 100%;
     height: 100%;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .card .box .content .icon
@@ -108,6 +110,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 2px;
     font-size: 2.5em;
     background: #2e2e2e;
     transition: 0.6s ease-in-out;
@@ -151,6 +154,7 @@ body
     text-decoration: none;
     font-weight: 500;
     margin-top: 10px;
+    border-radius: 7px;
     transition: 0.5s ease-in-out;
     transition: border-radius 0.5s ease;
 }
