--- a/ProgrammerForms/style.css
+++ b/ProgrammerForms/style.css
@@ -23,7 +23,7 @@ body
 .resume h2
 {
     width: 100%;
-    color: #89ec5d;
+    color: #ed5d9a;
     font-size: 36px;
     text-align: center;
     margin-bottom: 10px;
@@ -51,7 +51,7 @@ body
     position: relative;
     width: 100%;
     height: 40px;
-    color: #89ec5d;
+    color: #ed5d9a;
 }
 
 .resume .content .inputBox input,
@@ -99,7 +99,7 @@ body
     display: block;
     width: 100%;
     height: 2px;
-    background: #89ec5d;
+    background: #ed5d9a;
     transition: 0.5s;
     border-radius: 2px;
     pointer-events: none;
@@ -145,7 +145,7 @@ input[type="submit"]
     padding: 7px 35px;
     cursor: pointer;
     outline: none;
-    background: #89ec5d;
+    background: #ed5d9a;
     color: #000;
     font-size: 18px;
     border-radius: 5px;
@@ -158,7 +158,7 @@ input[type="submit"]
     padding: 7px 35px;
     cursor: pointer;
     outline: none;
-    background: #89ec5d;
+    background: #ed5d9a;
     color: #000;
     font-size: 18px;
     border-radius: 5px;
